--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
           {{ content }}
         </div>
       </div>
-      <footer><p>&copy; 2011-2017 Zack博客</p></footer>
+      <footer><p>&copy; 2011-2017 Zack博客 | <a href="{{ site.url }}/Sitemap.xml" target="_blank">Sitemap</a></p></footer>
     </div>
   </body>
 </html>
