--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <meta name="applicable-device" content="pc,mobile">
-    <link rel="apple-touch-icon" href="{{ site.url }}/images/assets/qnnsafe-icon.jpg">
-    <meta name="apple-mobile-web-app-title" content="QNNSafe">
+    <link rel="apple-touch-icon" href="{{ site.url }}/images/assets/icon.jpg">
+    <meta name="apple-mobile-web-app-title" content="Zack博客">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/sdpt.css">
@@ -36,18 +36,20 @@
         <div id="phone-navigation" class="visible-xs">
           <ul id="dashboard-menu" class="nav nav-list">
             <li><a rel="tooltip" data-placement="right" data-original-title="首页" href="{{ site.url }}"><i class="fa fa-home"></i> <span class="caption">首页</span></a></li>
-            <li><a rel="tooltip" data-placement="right" data-original-title="分类A" href="{{ site.url }}"><i class="fa fa-user"></i> <span class="caption">分类A</span></a></li>
-            <li><a rel="tooltip" data-placement="right" data-original-title="分类B" href="{{ site.url }}"><i class="fa fa-user"></i> <span class="caption">分类B</span></a></li>
-            <li><a rel="tooltip" data-placement="right" data-original-title="分类C" href="{{ site.url }}"><i class="fa fa-user"></i> <span class="caption">分类C</span></a></li>
+            <li><a rel="tooltip" data-placement="right" data-original-title="分类A" href="{{ site.url }}/a/"><i class="fa fa-newspaper-o"></i> <span class="caption">分类A</span></a></li>
+            <li><a rel="tooltip" data-placement="right" data-original-title="分类B" href="{{ site.url }}/b/"><i class="fa fa-newspaper-o"></i> <span class="caption">分类B</span></a></li>
+            <li><a rel="tooltip" data-placement="right" data-original-title="分类C" href="{{ site.url }}/c/"><i class="fa fa-newspaper-o"></i> <span class="caption">分类C</span></a></li>
             <li><a rel="tooltip" data-placement="right" data-original-title="关于我" href="{{ site.url }}/about/"><i class="fa fa-user"></i> <span class="caption">关于我</span></a></li>
+            <li><a rel="tooltip" data-placement="right" data-original-title="联系我" href="{{ site.url }}/contact/"><i class="fa fa-phone"></i> <span class="caption">联系我</span></a></li>
           </ul>
         </div>
         <ul class="nav nav-tabs hidden-xs">
           <li class="{% if page.category == 'home' %}active{% endif %}"><a href="{{ site.url }}"><i class="fa fa-home"></i> <span>首页</span></a></li>
-          <li class="{% if page.category == 'home' %}active{% endif %}"><a href="{{ site.url }}"><i class="fa fa-home"></i> <span>分类A</span></a></li>
-          <li class="{% if page.category == 'home' %}active{% endif %}"><a href="{{ site.url }}"><i class="fa fa-home"></i> <span>分类B</span></a></li>
-          <li class="{% if page.category == 'home' %}active{% endif %}"><a href="{{ site.url }}"><i class="fa fa-home"></i> <span>分类C</span></a></li>
-          <li class="{% if page.category == 'about' %}active{% endif %}"><a href="{{ site.url }}/about/"><i class="fa fa-home"></i> <span>关于我</span></a></li>
+          <li class="{% if page.category == 'a' %}active{% endif %}"><a href="{{ site.url }}/a/"><i class="fa fa-newspaper-o"></i> <span>分类A</span></a></li>
+          <li class="{% if page.category == 'b' %}active{% endif %}"><a href="{{ site.url }}/b/"><i class="fa fa-newspaper-o"></i> <span>分类B</span></a></li>
+          <li class="{% if page.category == 'c' %}active{% endif %}"><a href="{{ site.url }}/c/"><i class="fa fa-newspaper-o"></i> <span>分类C</span></a></li>
+          <li class="{% if page.category == 'about' %}active{% endif %}"><a href="{{ site.url }}/about/"><i class="fa fa-user"></i> <span>关于我</span></a></li>
+          <li class="{% if page.category == 'contact' %}active{% endif %}"><a href="{{ site.url }}/contact/"><i class="fa fa-phone"></i> <span>关于我</span></a></li>
         </ul>
       </div>
     </div>
