--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -4,5 +4,7 @@ layout: default
 <div class="row blog-post">
   <h2 align="center">{{ page.title }}</h2>
   <p align="center" class="muted small">{{ page.date | date:"%Y年%m月%d日" }}</p>
-  {{ content }}
+  <div class="col-md-12" style="text-indent:2em">
+    {{ content }}
+  </div>
 </div>
