--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
           <li class="{% if page.category == 'b' %}active{% endif %}"><a href="{{ site.url }}/b/"><i class="fa fa-newspaper-o"></i> <span>分类B</span></a></li>
           <li class="{% if page.category == 'c' %}active{% endif %}"><a href="{{ site.url }}/c/"><i class="fa fa-newspaper-o"></i> <span>分类C</span></a></li>
           <li class="{% if page.category == 'about' %}active{% endif %}"><a href="{{ site.url }}/about/"><i class="fa fa-user"></i> <span>关于我</span></a></li>
-          <li class="{% if page.category == 'contact' %}active{% endif %}"><a href="{{ site.url }}/contact/"><i class="fa fa-phone"></i> <span>关于我</span></a></li>
+          <li class="{% if page.category == 'contact' %}active{% endif %}"><a href="{{ site.url }}/contact/"><i class="fa fa-phone"></i> <span>联系我</span></a></li>
         </ul>
       </div>
     </div>
